crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__number_int.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "42"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Number(
        NumberLit {
            value: 42.0,
            text: "42",
        },
    ),
}
