crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__number_keeps_text.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "0xFF"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Number(
        NumberLit {
            value: 255.0,
            text: "0xFF",
        },
    ),
}
