crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__string_empty.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "\"\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Str(
        "",
    ),
}
