crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__string_escapes.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "\"a\\nb\\t\\\"q\\\"\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Str(
        "a\nb\t\"q\"",
    ),
}
