crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__string_simple.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "\"hello\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Str(
        "hello",
    ),
}
