crates/alder-parse/src/expression/snapshots/alder_parse__expression__literal__tests__string_unicode.snap
---
source: crates/alder-parse/src/expression/literal.rs
description: "\"\\u{1F600}\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Str(
        "😀",
    ),
}
